--- a/StackOverflow-lite/HTML/UserProfile.html
+++ b/StackOverflow-lite/HTML/UserProfile.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name = "author" content = "Kigai Phiona Mary">
-        <link rel="stylesheet" type="text/css" media="screen" href="../CSS/index.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="../CSS/UserProfile.css" />
         <title>StackOverflow-Lite |Your Profile</title>
         <script src="js/main.js"></script>
 
@@ -26,6 +26,8 @@
                     <ul>
                         <li> <a href = "index.html"> Home </a></li>
                         <li> <a href = "Q$A.html"> Questions </a></li>
+                        <li class="nav-item dropdown">
+                        <a href="index.html">Logout</a>
                     </ul>
                 </nav>
             </div>
