--- a/StackOverflow-lite/HTML/sign_up.html
+++ b/StackOverflow-lite/HTML/sign_up.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>StackOverflow-Lite</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../CSS/sign_up.css" />
-    <script src="js/main.js"></script>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name = "author" content = "Kigai Phiona Mary">
+        <link rel="stylesheet" type="text/css" media="screen" href="../CSS/sign_up.css" />
+        <title>StackOverflow-Lite |SIGN UP </title>
+        <script src="js/main.js"></script>
 
 </head>
-<body>  
-    <nav>
-        <ul>
-        <img  alt="StackOverflow-Lite" src="../MEDIA/Logo.png" style="width:10cm;height:5cm;">
-        </ul>
-    </nav>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+            <img  alt="StackOverflow-Lite" src="../MEDIA/Logo.png" style="width:10cm;height:5cm;">
+            </ul>
+        </nav>
+        <div class = "container">
+            <div id = "branding">
+                <h1>STACK OVERFLOW LITE</h1>
+
+            </div>
+            <nav>
+                <ul>
+                    <li> <a href = "index.html"> Home </a></li>
+                    <li> <a href = "sign_in.html"> Sign in </a></li>
+                    <li> <a href = "Q$A.html"> Questions </a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <div class="container">
         <h1>Sign Up</h1>
         <p>Please fill in this form to create an account.</p>
