Create API for questions
One can be able to post a question, retrieve a particular question and view all available questions

--- a/HTML/sign_in.html
+++ b/HTML/sign_in.html
@@ -49,8 +49,11 @@
 
             <div class="container" style="background-color:#f1f1f1">
 
-                <span class="psw">Forgot <a href="#">password?</a></span>
-              </div>
+                    <label for="psw"><b><a href="#"></a>Forgot Password? </b></label><br>
+             </div>
+
+                
+
     </section>
       </div>
     </div>
@@ -59,7 +62,7 @@
             color: #fff;
             background-color: #333331;
             text-align: center;
-            position: fixed;
+            position: float;
             left: 0;
             bottom: 0;
             width: 100%;
