Restructure sign in page #159696628

--- a/HTML/sign_in.html
+++ b/HTML/sign_in.html
@@ -44,10 +44,7 @@
                 <button type="submit">Sign In</button><br>
                 <label>
                   <input type="checkbox" checked="checked" name="remember"> Remember me<br>
-                </label>>
-
-                <label for="psw"><b><a href="#"></a> Forgot Password? </b></label><br>
-
+                </label>
             </div>
 
             <p class="center_text">Don't have account? <a href="">Click here.</a></p>
