Include profile page #159730569

--- a/HTML/Q$A.html
+++ b/HTML/Q$A.html
@@ -28,7 +28,7 @@
                     <li> <a href = "index.html"> Home </a></li>
                     <li> <a href = "sign_up.html"> Sign up </a></li>
                     <li> <a href = "sign_in.html"> Sign in </a></li>
-                    <li> <a href = "Q$A.html"> Questions </a></li>
+                    <li><a href = "UserProfile.html"> Your profile</a> </li>
                 </ul>
             </nav>
         </div>
