--- a/HTML/index.html
+++ b/HTML/index.html
@@ -24,10 +24,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li> <a href = "index.html"> Home </a></li>
                         <li> <a href = "sign_up.html"> Sign up </a></li>
                         <li> <a href = "sign_in.html"> Sign in </a></li>
                         <li> <a href = "Q$A.html"> Questions </a></li>
+                        <li><a href = "UserProfile.html"> Your profile</a> </li>
                     </ul>
                 </nav>
             </div>
